<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="finalproject.comp3617.com.parkinglotmanager.activity.dashboard.DashboardDetailActivity">

    <RelativeLayout
        android:id="@+id/dashboardDetailTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/back"
            android:textColor="@color/white"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/locationCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="A001"
            android:layout_centerVertical="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/dashboardDetailVehicleInfoLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_below="@id/dashboardDetailTopBar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/type" />

            <EditText
                android:id="@+id/vehicleTypeEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/make" />

            <EditText
                android:id="@+id/vehicleMakeEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/model" />

            <EditText
                android:id="@+id/vehicleModelEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/plate" />

            <EditText
                android:id="@+id/vehicleLicensePlateEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/tag" />

            <TextView
                android:id="@+id/vehicleTagStatusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_assigned" />

            <Button
                android:id="@+id/tagButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/green"
                android:layout_margin="10dp"
                android:text="@string/tag"  />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/arrival_time" />

            <TextView
                android:id="@+id/vehicleArrivalTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/dashboardDetailBottomRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/checkInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_in"
            android:textColor="@color/white"
            android:background="@color/green"
            android:visibility="invisible"
            android:layout_margin="5dp"
            android:layout_alignParentLeft="true" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/white"
            android:background="@color/green"
            android:visibility="invisible"
            android:layout_margin="5dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/checkOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_out"
            android:textColor="@color/white"
            android:background="@color/green"
            android:visibility="invisible"
            android:layout_margin="5dp"
            android:layout_alignParentRight="true" />


    </RelativeLayout>

</RelativeLayout>
