<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/captionTextView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/imeiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/captionTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/device_imei"
        android:textSize="16sp"
        android:textColor="@color/white" />

    <ImageButton
        android:id="@+id/scanBadgeImageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/imeiTextView"
        android:layout_above="@+id/scanBadgeTextView"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_barcode"
        android:background="@color/black" />

    <TextView
        android:id="@+id/scanBadgeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_badge"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp" />


</RelativeLayout>
