<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:id="@+id/locationInfoLinearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/removeLocationImageButton">

        <TextView
            android:id="@+id/locationIdLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:text="@string/id"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/locationIdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="100"
            android:layout_toRightOf="@+id/locationIdLabelTextView" />

        <TextView
            android:id="@+id/locationCodeLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/code" />

        <TextView
            android:id="@+id/locationCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="A001" />

        <TextView
            android:id="@+id/locationOrderCodeLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/order" />

        <TextView
            android:id="@+id/locationOrderCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="1" />

        <CheckBox
            android:id="@+id/locationIsMultiCapacityCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multi"
            android:clickable="false"
            android:layout_toLeftOf="@+id/removeUserImageButton"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/removeLocationImageButton"
        android:src="@drawable/ic_remove"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:background="@color/white"/>

</RelativeLayout>